primeras revisiones a beapi

--- a/beapi.tex
+++ b/beapi.tex
@@ -732,6 +732,7 @@ y otro conjunto de pruebas que revelan errores (si los hubiera) en los métodos 
 
 
 \cacho{Hace falta poner como se corre, no la veo, es mas de tool paper eso}
+\pp{No, es de tool paper}
 
 % \subsection{Entradas de BEAPI}
 
